--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
 </head>
 <body>
   <div id="root"></div>
+  <script src="https://www.reactriot.com/entries/324-redsocks/vote.js" type="text/javascript"></script>
 </body>
 </html>
